# rover_interfaces

./: CMakeLists.txt  README.md  package.xml
msg/: ACS712.msg  Battery.msg  BatteryRaw.msg  I2CReadResult.msg  I2CWrite.msg  LEDMessage.msg
srv/: I2CESP32Communication.srv  I2CReadRequest.srv  I2Cesp32ReadRequest.srv
